Closed Bug 993710 Opened 10 years ago Closed 10 years ago

Don't return names when enumerating Navigator/Window if they wouldn't be resolved

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla31

People

(Reporter: peterv, Assigned: peterv)

References

Details

Attachments

(1 file)

Attached patch v1Splinter Review
      No description provided.
Attachment #8403589 - Flags: review?(bzbarsky)
Comment on attachment 8403589 [details] [diff] [review]
v1

>+nsWindowSH::NameStructEnabled(JSContext* aCx, nsGlobalWindow *aWin,
>+                               const nsAString& aName,
>+                               const nsGlobalNameStruct& aNameStruct)

Fix indent?

>+    if (NS_FAILED(rv) || !nameStruct) {
>+      return true;

return false?

>+  if (aNameStruct.mType == nsGlobalNameStruct::eTypeStaticNameSet) {

Er, that's dead code.  I forgot to remove it when I removed the resolve bits that looked at that struct type...  Followup ok to nix this and the bits in the namespace manager that handle it, or you could do it here.

>+  // "Components" is marked as enumerable but only resolved on demand :-/.

Can we file a followup on fixing that one way or another?

>+++ b/dom/webidl/Window.webidl

The change here looks unrelated, but ok.

r=me
Attachment #8403589 - Flags: review?(bzbarsky) → review+
> Er, that's dead code.  I forgot to remove it when I removed the resolve bits
> that looked at that struct type...  Followup ok to nix this and the bits in
> the namespace manager that handle it, or you could do it here.

Why is that dead code? We have at least one of these in the tree.
Flags: needinfo?(bzbarsky)
Oh, I was thinking of dynamic-nameset.

The static one is the fake PrivilegeManager.  We should find a better way to do that.
Flags: needinfo?(bzbarsky)
https://hg.mozilla.org/mozilla-central/rev/0ad53ad7c808
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: