Bug 993710 - Don't return names when enumerating Navigator/Window if they wouldn't be resolved. r=bz.